# intentos

./: .env.example  .gitignore  Architecture.md  CLAUDE.md  Capabilities.md  FIRST_LAUNCH.md  LICENSE  README.md  README_DEV.md  SECURITY.md  intentos.spec  pyproject.toml  requirements.txt  setup.ps1  setup.sh
.github/workflows/: release.yml
capabilities/: ARCHITECTURE.md  RAG_SYSTEM.md
capabilities/browser_agent/: agent.py  manifest.json
capabilities/document_agent/: agent.py  manifest.json
capabilities/file_agent/: agent.py  audit.py  planner.py  primitives.py  schemas.py
capabilities/image_agent/: agent.py
capabilities/kyc_agent/: agent.py  manifest.json
capabilities/media_agent/: __init__.py  agent.py
capabilities/memory_agent/: __init__.py  agent.py
capabilities/system_agent/: agent.py
core/: audit.py  cli.py  config.py  first_run.py  kernel.py  kernel_v2.py
core/api/: __init__.py  server.py
core/enterprise/: __init__.py  auth.py  backup.py  compliance.py  policy.py  siem.py  siem_export.py  telemetry.py  workspaces.py
core/hub/: offline.py  sdk.py  signing.py  ui_reasoning.py
core/inference/: hardware.py  llm.py  ollama_manager.py  providers.py  router.py
core/orchestration/: cost_manager.py  message_bus.py  mode_router.py  scheduler.py  schemas.py  sop.py
core/platform/: __init__.py  bundles.py  registry.py
core/rag/: context.py  experience.py  file_index.py  retrieval.py  suggestions.py  task_index.py  user_profile.py  vector_index.py
core/security/: __init__.py  credential_provider.py  encryption.py  exceptions.py  keychain.py  leak_detector.py  pipeline.py  sandbox.py  sanitizer.py  secrets_manager.py
core/storage/: chat_store.py
core/voice/: __init__.py  stt.py  tts.py
distribution/: README_INSTALL.md  install.sh
distribution/docker/: Dockerfile  docker-compose.yml
distribution/homebrew/: intentos.rb
docs/: PITCH_DECK_CONTENT.md  PRIVACY_POLICY.md  SPEC.md  TERMS_OF_SERVICE.md  VISION.md  featurespec.md  implementation.md
intentos-daemon/: Cargo.toml
intentos-daemon/src/: main.rs
intentos-daemon/src/ipc/: mod.rs
intentos-daemon/src/observability/: mod.rs
intentos-daemon/src/proxy/: mod.rs
intentos-daemon/src/sandbox/: mod.rs  policy.rs
intentos-daemon/src/scheduler/: mod.rs  pool.rs  process.rs
intentos-daemon/src/security/: encryption.rs  leak_detector.rs  mod.rs
intentos.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: _pyinstaller_runtime.py  build-desktop.ps1  build-desktop.sh  build-mdm-msi.ps1  build-mdm-pkg.sh  build-pkg.sh  build-sidecar.py  console_demo_server.py  enterprise_demo.py  generate_icon.py  intentos-backend.spec  intentos-cli.spec  launcher.py  sign-demo.sh
site/: index.html  install.sh  vercel.json
tests/: test_audit_viewer.py  test_cli.py  test_config.py  test_e2e.py  test_extract_json.py  test_first_run.py  test_kernel_v2.py  test_ollama_manager.py  test_phase2.py  test_tts.py
ui/desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.full.conf.json
ui/desktop/src-tauri/capabilities/: default.json
ui/desktop/src-tauri/nsis/: installer.nsi
ui/desktop/src-tauri/src/: commands.rs  lib.rs  main.rs  ollama.rs  sidecar.rs
(+92 files in other folders)
