[package]
name = "intentos-desktop"
version = "2.0.0"
description = "IntentOS Desktop — AI execution layer with local-first privacy"
edition = "2021"

[lib]
name = "intentos_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
futures-util = "0.3"
which = "7"
open = "5"
dirs = "6"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
